# SETI-EIRP-Comparison-Plot

./: .gitignore  README.md  pyproject.toml  surveys.bib
src/: functions.py  main.py  surveys.yaml
src/seti_eirp/: functions.py  main.py  surveys.yaml
